crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_ambiguous_attach_order.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-attach-order]: Ambiguous attach order.
                              The branches attach `rlang`, `cli` in different orders, so which package masks the other depends on the branch taken.
 --> a.R:1:1
  |
1 | / if (cond) {
2 | |     library(cli)
3 | |     library(rlang)
4 | | } else {
5 | |     library(rlang)
6 | |     library(cli)
7 | | }
  | |_^
