crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_conditional_attach_branch_join.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-callee-resolution]: Ambiguous reading of `reactive()`.
                                   The package `shiny` is conditionally attached and does not import `reactive` across all paths.
 --> a.R:2:1
  |
1 |   if (cond) library(shiny)
  |             -------------- `shiny` attached only here
2 | / reactive({
3 | |     x <- 1
4 | | })
  | |__^
