crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_conditional_attach_wins_over_shadow.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-callee-resolution]: Ambiguous reading of `reactive()`.
                                   The package `shiny` is conditionally attached and does not import `reactive` across all paths.
 --> a.R:6:1
  |
2 |     library(shiny)
  |     -------------- `shiny` attached only here
...
6 | reactive(1)
  | ^^^^^^^^^^^
