crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_conditional_shadow_eager.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-callee-resolution]: Ambiguous reading of effectful `local()`.
                                   A conditional assignment could shadow `local` on some paths and change its effect.
 --> a.R:3:5
  |
2 |       if (cond) local <- identity
  |                 ----- conditional assignment to `local`
3 | /     local({
4 | |         y <- 1
5 | |     })
  | |______^
