crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_conditional_shadow_from_parameter_default.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-effect]: Ambiguous reading of effectful `local()`.
                        A conditional assignment could shadow `local` on some paths and change its effect.
 --> a.R:2:5
  |
1 |   f <- function(x = if (cond) local <- identity) {
  |                               ----- conditional assignment to `local`
2 | /     local({
3 | |         y <- 1
4 | |     })
  | |______^
