crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_conditional_shadow_package_call.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-callee-resolution]: Ambiguous reading of effectful `test_that()`.
                                   A conditional assignment could shadow `test_that` on some paths and change its effect.
 --> a.R:5:1
  |
3 |     test_that <- identity
  |     --------- conditional assignment to `test_that`
4 | }
5 | test_that("d", { x <- 1 })
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
