crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_inherited_attach_shadows_a_callee.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
assertion_line: 432
expression: "render(\"w/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
info[inherited-shadow]: This `library` call has an ambiguous effect. It resolves through package `base` when the file is sourced on its own, and to package `shadowr` when sourced by `main.R`.
 --> w/helpers.R:1:1
  |
1 | library(dplyr)
  | ^^^^^^^^^^^^^^
