crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_inherited_shadow_for_a_loader_only_sibling_attach.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/R/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
info[inherited-shadow]: This `library` call has an ambiguous effect.
                        It resolves through package `shadowr` when the file is sourced on its own, and to package `base` when sourced by `run.R`.
 --> w/R/helpers.R:1:1
  |
1 | library(dplyr)
  | ^^^^^^^^^^^^^^
